@@ -1784,8 +1784,8 @@ generated.
   </para>
 
   <para>
-   The window shows a table with two columns. The <guilabel>Before</guilabel> column
-   shows the current name of each selected file, and the <guilabel>After</guilabel>
+   The window shows a table with two columns. The <guilabel>Old name</guilabel> column
+   shows the current name of each selected file, and the <guilabel>New name</guilabel>
    column shows the new name, which is initially the same.
   </para>
 
