@@ -6,6 +6,9 @@
 ~~~~~~~~~~~
 Removed copy of GTK icon theme system. We now depend on GTK 2.4, which
 includes it (Thomas Leonard).
+Renamed 'Before' and 'After' in the bulk rename box to 'Old name' and
+'New name', as they were causing problems for translators (reported by
+Yuri Bongiorno).
 
 09-Feb-2005
 ~~~~~~~~~~~
